src/objects/Printer_Message__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Printer_Command__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Printer Command</label>
        <referenceTo>Printer_Command__c</referenceTo>
        <relationshipLabel>Printer Messages</relationshipLabel>
        <relationshipName>Printer_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printer_Name__c</fullName>
        <label>Printer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Printer Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Printer Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Printer Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>